--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ APP_ENV=dev
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=0.0.0.0
+APP_DOMAIN_NAME=0.0.0.0
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -42,7 +43,7 @@ SESSION_CONNECTION=default
 SESSION_STORE=redis
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -71,4 +72,3 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
